# Carvera_Controller

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Controller.py  GcodeViewer.py  PRIVACY.md  README.md  README_CNC_CORE.md  USBStream.py  WIFIStream.py  XMODEM.py  __init__.py  arcball_from_cpp.py  axis_helper.glsl  buildozer.spec  cnc_controller.py  cnc_core.py  cnc_utils.py  config.json  example_usage.py  hello_cube.glsl  main.py  makera.kv  makera.py  messages.pot  pyproject.toml  requirements.txt  run_tests.py
.github/: dependabot.yml
.github/actions/bootstrap-poetry/: action.yaml
.github/workflows/: dev-release.yaml  release.yaml
carveracontroller/: CNC.py  Controller.py  GcodeViewer.py  __version__.py  config_ca1_diff.json  controller_config.json  main.py  makera.kv  update_translations.py
carveracontroller/addons/probing/: ProbingControls.kv  ProbingControls.py  ProbingPopup.kv  ProbingPopup.py
carveracontroller/addons/tooltips/: Tooltips.kv  Tooltips.py
carveracontroller/locales/: messages.pot
communication/: __init__.py  usb_stream.py  wifi_stream.py  xmodem.py
examples/: README.md  TESTING_REAL_MACHINE.md  discover_machines.py  example_usage.py  quick_test.py  test_real_machine.py
gcodes/Examples/LED/: ACRYLIC-Carvera.nc
gcodes/Examples/Relief/: PirateShip.nc
gcodes/Examples/Rotation/: NefertitiFinish.nc
gcodes/Examples/Tests/: fatigue-test.nc
locales/de/LC_MESSAGES/: de.mo  de.po
locales/en/LC_MESSAGES/: en.po
locales/es/LC_MESSAGES/: es.mo  es.po
locales/fr/LC_MESSAGES/: fr.mo  fr.po
locales/it/LC_MESSAGES/: it.mo  it.po
locales/ja/LC_MESSAGES/: ja.mo  ja.po
locales/ko/LC_MESSAGES/: ko.mo  ko.po
locales/pt/LC_MESSAGES/: pt.mo  pt.po
locales/zh-CN/LC_MESSAGES/: zh-CN.mo  zh-CN.po
locales/zh-TW/LC_MESSAGES/: zh-TW.mo  (+1 more)
packaging_assets/: AppImageBuilder-template.yml  AppImageBuilder.yml  icon-src.icns  icon.psd
packaging_assets/Docker/: Dockerfile  menu.xml  supervisord.conf
packaging_assets/android/: main.py
scripts/: build.py  build_ios.sh  rename-release-file.sh  update_translations.py
tests/: __init__.py  example_gcode_with_response.py  run_tests.py  test_basic_functionality.py  test_cnc_controller.py  test_cnc_core.py  test_cnc_utils.py  test_gcode_response.py
(+31 files in other folders)
