[build-system]
requires = [ "poetry-core>=1.0.0",]

[tool.poetry]
name = "carvera-controller-community"
description = "Community developed controller for the Carvera CNC"
version = "0.0.0"  # version is managed by the build.py script
license = "GPL-2.0"
readme = "README.md"
authors = [ "Carvera-Community",]
[[tool.poetry.packages]]
include = "carveracontroller"

[[tool.poetry.packages]]
include = "scripts"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
Kivy = "^2.3.1"
pyserial = "^3.5"
pyquicklz = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.0"
pyinstaller-versionfile = ">=2.1.1,<4.0.0"
appimage-builder = "^1.1.0"
ruamel-yaml = "^0.18.6"
Cython = "^3.0.11"
toml = "^0.10.2"

[tool.poetry.group.ios-dev.dependencies.kivy-ios]
git = "https://github.com/zittix/kivy-ios.git"
branch = "fix_custom_recipes"
