[build-system]
requires = [ "poetry-core>=1.0.0",]

[tool.poetry]
name = "carvera-controller-core"
description = "Core CNC controller library for Carvera machines (UI-free)"
version = "1.0.0"
license = "GPL-2.0"
readme = "README_CNC_CORE.md"
authors = [ "Carvera-Community",]

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
